stanza 埋め込み検証中

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -11,8 +11,8 @@ body{
     -moz-osx-font-smoothing: grayscale;
   }
   .font.ja;
-  background-color: @color-gray-dark;
-  color: @color-white-pure;
+  //background-color: @color-gray-dark;
+  //color: @color-white-pure;
 
   a{
     color: #cc7799;
