--- a/src/pug/_template/_base.pug
+++ b/src/pug/_template/_base.pug
@@ -35,6 +35,10 @@ html(lang = 'ja', xmlns:og="http://ogp.me/ns#")
     meta(name="viewport", content="width=device-width,initial-scale=1.0,minimum-scale=1.0")
     meta(name="description", content=`${meta.description}`)
     meta(name="keywords", content=``)
+    script(src="https://cdn.jsdelivr.net/combine/npm/@babel/polyfill@7.2.5/dist/polyfill.min.js,npm/@ungap/url-search-params@0.1.2/min.js,npm/whatwg-fetch@3.0.0/dist/fetch.umd.js" crossorigin="")
+    script(src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@1.3.0/webcomponents-loader.js" crossorigin="")
+    script(src=`${pathToLibs}stanza.js`)
+    block stanza
     link(href=`${pathToLibs}html5reset.css`, rel="stylesheet", type="text/css")
     link(href=`${pathToCSS}main.css`, rel="stylesheet", type="text/css")
     block links
@@ -49,8 +53,5 @@ html(lang = 'ja', xmlns:og="http://ogp.me/ns#")
     title= title
   body(class=bodyClasses)
     main
-      h1 HELLO WORLD
       block main
-
-
-
+    script(src=`${pathToJS}main.js`)
