--- a/src/pug/top.pug
+++ b/src/pug/top.pug
@@ -4,8 +4,10 @@ block vars
   - lev1ID = "top";
 block links
   link(href=`${pathToCSS}top.css`, rel="stylesheet", type="text/css")
-
 block main
-  p this is index.html
-  p: a(href=links.google) link to Google
-
+  h2 List of Stanzas
+  a(href="./gms_by_clstid.html" style="display: block;") gms_by_clstid
+  a(href="./gms_by_tid.html" style="display: block;") gms_by_tid
+  a(href="./growth_medium.html" style="display: block;") growth_medium
+  a(href="./event_listener.html" style="display: block;") event_listener
+  a(href="./gm_component.html" style="display: block;") gm_component
