--- a/src/pug/gms_by_clstid.pug
+++ b/src/pug/gms_by_clstid.pug
@@ -1,5 +1,8 @@
 extends _template/_base
 
+block vars
+  - lev1ID = "gms_by_clstid";
+
 block stanza
   script(src=`${pathToLibs}gms_by_clstid.js`)
 
@@ -8,4 +11,3 @@ block main
   p.output
   .showcase_box
     <togostanza-gms_by_clstid clst_id="26_200"></togostanza-gms_by_clstid>
-  include ./_include/gms_by_clstid.html
