各ページのテンプレート作った

--- a/src/pug/_template/_base.pug
+++ b/src/pug/_template/_base.pug
@@ -8,7 +8,7 @@
 - var lev = 0;
 - var pathToRoot =  ""
 - var lev1ID = "";
-- var stanzaID = "";
+- var stanzaIDs = [];
 
 block vars
 - titleBase = stanzaID;
@@ -43,8 +43,8 @@ html(lang = 'ja', xmlns:og="http://ogp.me/ns#")
     meta(name="keywords", content=``)
     script(src="https://cdn.jsdelivr.net/combine/npm/@babel/polyfill@7.2.5/dist/polyfill.min.js,npm/@ungap/url-search-params@0.1.2/min.js,npm/whatwg-fetch@3.0.0/dist/fetch.umd.js" crossorigin="")
     script(src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@1.3.0/webcomponents-loader.js" crossorigin="")
-    script(src=`${pathToLibs}stanza.js`)
-    script(src=`${pathToStanza}${stanzaID}/index.js`)
+    each stanzaID in stanzaIDs
+      link(rel="import", href=`${pathToStanza}${stanzaID}`)
     link(href=`${pathToLibs}html5reset.css`, rel="stylesheet", type="text/css")
     link(href=`${pathToCSS}main.css`, rel="stylesheet", type="text/css")
     block links
