トップのクエリーの仕組み作成中

--- a/src/pug/_template/_base.pug
+++ b/src/pug/_template/_base.pug
@@ -61,3 +61,5 @@ html(lang = 'ja', xmlns:og="http://ogp.me/ns#")
     main
       block main
     script(src=`${pathToJS}main.js`)
+    block scripts
+
