トップページのStanzaバインディングできた

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -59,6 +59,18 @@ h1, h2, h3, h4, h5, th{
 }
 
 
+///
+main{
+  width: 960px;
+  display: block;
+  margin: 0 auto;
+  padding: 30px;
+  box-sizing: border-box;
+
+  //header 24px, footer 28px
+  min-height: ~"calc(100vh - 24px - 28px)";
+}
+
 @media screen and (max-width: @responsive-threshold1){
 }
 
