リダイレクトの設定かけた

--- a/src/pug/_template/_base.pug
+++ b/src/pug/_template/_base.pug
@@ -19,6 +19,7 @@ block vars
 - for(var i=0; i<lev; i++){
 -  pathToRoot += "../";
 - }
+- pathToRoot = "/";
 - var pathToAssets = pathToRoot + "assets/";
 - var pathToJS = pathToAssets + "js/";
 - var pathToCSS = pathToAssets + "css/";
