リダイレクトが動くようになった

--- a/src/pug/component.pug
+++ b/src/pug/component.pug
@@ -5,5 +5,4 @@ block vars
   - stanzaIDs = ["component_by_gmoid", "media_by_gmoid"]
 
 block main
-  togostanza-component_by_gmoid
-  togostanza-media_by_gmoid
+  | this is component
