--- a/src/pug/media.pug
+++ b/src/pug/media.pug
@@ -5,5 +5,4 @@ block vars
   - stanzaIDs = ["medium_by_gmid", "organisms_by_gmid"]
 
 block main
-  togostanza-medium_by_gmid
-  togostanza-organisms_by_gmid
+  | this is media
