--- a/src/pug/organism.pug
+++ b/src/pug/organism.pug
@@ -5,5 +5,4 @@ block vars
   - stanzaIDs = ["organism_by_taxid", "media_by_taxid"]
 
 block main
-  togostanza-organism_by_taxid
-  togostanza-media_by_taxid
+  | this is organism
