--- a/src/stanza/organisms_by_gmid/templates/stanza.html
+++ b/src/stanza/organisms_by_gmid/templates/stanza.html
@@ -2,5 +2,5 @@
   <p>{{greeting}}</p>
 {{/unless}}
 {{#if query}}
-  <p>Querying Media of taxid, ... {{query}}</p>
+  <p>Querying organisms of gmid ... {{query}}</p>
 {{/if}}
