--- a/src/pug/media.pug
+++ b/src/pug/media.pug
@@ -5,4 +5,8 @@ block vars
   - stanzaIDs = ["medium_by_gmid", "organisms_by_gmid"]
 
 block main
-  | this is media
+  togostanza-medium_by_gmid#info(query="")
+  togostanza-organisms_by_gmid#organisms(query="")
+
+block scripts
+  script(src=`${pathToJS}media.js`)
