--- a/src/stanza/media_by_gmoid/templates/stanza.html
+++ b/src/stanza/media_by_gmoid/templates/stanza.html
@@ -1,1 +1,6 @@
-<p>{{greeting}}</p>
+{{#unless query}}
+  <p>{{greeting}}</p>
+{{/unless}}
+{{#if query}}
+  <p>Querying media of gmoid ... {{query}}</p>
+{{/if}}
