--- a/src/stanza/medium_by_gmid/templates/stanza.html
+++ b/src/stanza/medium_by_gmid/templates/stanza.html
@@ -1,1 +1,6 @@
-<p>{{greeting}}</p>
+{{#unless query}}
+  <p>{{greeting}}</p>
+{{/unless}}
+{{#if query}}
+  <p>Querying medium of ... {{query}}</p>
+{{/if}}
