--- a/src/less/main.less
+++ b/src/less/main.less
@@ -4,8 +4,8 @@
 @import (reference) "./_include/relatives";
 //
 body{
-  -webkit-font-smoothing: subpixel-antialiased;
-  -moz-osx-font-smoothing: unset;
+  -webkit-font-smoothing:antialiased;
+  font-family: 'Fira Sans Condensed', sans-serif;
   @media only screen and(-webkit-min-device-pixel-ratio: 2),(min-resolution: 2dppx){
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -61,7 +61,7 @@ h1, h2, h3, h4, h5, th{
 
 ///
 main{
-  width: 960px;
+  //width: 960px;
   display: block;
   margin: 0 auto;
   padding: 30px;
@@ -81,3 +81,4 @@ main{
 }
 
 
+@import "main/structure";
