--- a/src/stanza/gmdb_organism_by_taxid/templates/stanza.html
+++ b/src/stanza/gmdb_organism_by_taxid/templates/stanza.html
@@ -109,8 +109,9 @@
       <span class="key">Taxonomy ID: </span>
       <span class="value">{{result.taxid}}</span>
       <span class="links">
-        <a class="link-btn" href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?mode=Info&id={{result.taxid}}">NCBI</a>
-        <a class="link-btn" href="http://togogenome.org/organism/{{result.taxid}}">TogoGenome</a>
+        <a class="link-btn" target="_blank"
+           href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?mode=Info&id={{result.taxid}}">NCBI</a>
+        <a class="link-btn" target="_blank" href="http://togogenome.org/organism/{{result.taxid}}">TogoGenome</a>
       </span>
 
     </p>
@@ -128,8 +129,8 @@
           <span class="rank">{{rank}}</span>
           <span class="label">{{label}}</span>
           <span class="link">
-            <a class="link-btn" href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?mode=Info&id={{taxid}}"
-          target="_blank">NCBI</a>
+            <a class="link-btn" target="_blank"
+               href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?mode=Info&id={{taxid}}">NCBI</a>
           </span>
 
         </li>
