レイアウト微調整

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -61,7 +61,7 @@ h1, h2, h3, h4, h5, th{
 
 ///
 main{
-  //width: 960px;
+  max-width: 1024px;
   display: block;
   margin: 0 auto;
   padding: 30px;
