--- a/src/stanza/gmdb_organism_by_taxid/templates/stanza.html
+++ b/src/stanza/gmdb_organism_by_taxid/templates/stanza.html
@@ -119,7 +119,7 @@
       <span class="value">{{result.scientific_name}}</span>
     </p>
     {{#if result.authority_name}}
-      Authority name:<br>{{result.authority_name}}
+      <p>Authority name:<br>{{result.authority_name}}</p>
     {{/if}}
 
     <h3>LINEAGE</h3>
