--- a/src/stanza/gmdb_organism_by_taxid/templates/stanza.html
+++ b/src/stanza/gmdb_organism_by_taxid/templates/stanza.html
@@ -101,49 +101,46 @@
 <div class="wrapper">
 
   {{#if error}}
-    <p>{{msg}}</p>
+  <p>{{msg}}</p>
   {{/if}}
 
   {{#unless error}}
-    <p class="tax-id">
-      <span class="key">Taxonomy ID: </span>
-      <span class="value">{{result.taxid}}</span>
-      <span class="links">
+  <p class="tax-id">
+    <span class="key">Taxonomy ID: </span>
+    <span class="value">{{result.taxid}}</span>
+    <span class="links">
         <a class="link-btn" target="_blank"
            href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?mode=Info&id={{result.taxid}}">NCBI</a>
         <a class="link-btn" target="_blank" href="http://togogenome.org/organism/{{result.taxid}}">TogoGenome</a>
       </span>
 
-    </p>
-    <p class="name">
-      <span class="value">{{result.scientific_name}}</span>
-    </p>
-    {{#if result.authority_name}}
-      Authority name:<br>{{result.authority_name}}
-    {{/if}}
+  </p>
+  <p class="name">
+    <span class="value">{{result.scientific_name}}</span>
+  </p>
+  {{#if result.authority_name}} Authority name:<br>{{result.authority_name}} {{/if}}
 
-    <h3>LINEAGE</h3>
-    <ul class="lineage-list">
-      {{#each result.lineage}}
-        <li class="list-group-item">
-          <span class="rank">{{rank}}</span>
-          <span class="label">{{label}}</span>
-          <span class="link">
+  <h3>LINEAGE</h3>
+  <ul class="lineage-list">
+    {{#each result.lineage}}
+    <li class="list-group-item">
+      <span class="rank">{{rank}}</span>
+      <span class="label">{{label}}</span>
+      <span class="link">
             <a class="link-btn" target="_blank"
                href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?mode=Info&id={{taxid}}">NCBI</a>
           </span>
 
-        </li>
-      {{/each}}
-    </ul>
+    </li>
+    {{/each}}
+  </ul>
 
-    {{#if result.type_material}}
-      <h3>TYPE STRAINS</h3>
-      <ul class="simple-list">
-        {{#each result.type_material}}
-          <li>{{label}}</li>
-        {{/each}}
-      </ul>
-    {{/if}}
-  {{/unless}}
+  {{#if result.type_material}}
+  <h3>TYPE STRAINS</h3>
+  <ul class="simple-list">
+    {{#each result.type_material}}
+    <li>{{label}}</li>
+    {{/each}}
+  </ul>
+  {{/if}} {{/unless}}
 </div>
