--- a/src/stanza/gmdb_list_components_by_gmoids/templates/stanza.html
+++ b/src/stanza/gmdb_list_components_by_gmoids/templates/stanza.html
@@ -1,13 +1,40 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@300;600&display=swap');
+</style>
+<style>
+  .wrapper {
+    font-size: 18px;
+    font-family: 'Fira Sans Condensed', sans-serif;
+    padding: 16px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    font-weight: 300;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    color: #333;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  }
+  .query-key{
+    background-color: #f5f4f3;
+    padding: 5px;
+    color: #CC3366;
+  }
+</style>
+
 {{#if error}}{{#if msg}}
   <p>{{msg}}</p>
 {{/if}}{{/if}}
 
 {{#unless error}}
-  <h2>
-    Querying components with gmo_id:
-    {{#each result.query}}
-      <span>{{this}}</span>
-    {{/each}}
-  </h2>
+  <div class="wrapper">
+    <h2>
+      Querying components with gmo_id:
+      {{#each result.query}}
+        <span class="query-key">{{this}}</span>
+      {{/each}}
+    </h2>
+  </div>
 {{/unless}}
 
