--- a/src/stanza/gmdb_organism_by_taxid/templates/stanza.html
+++ b/src/stanza/gmdb_organism_by_taxid/templates/stanza.html
@@ -86,6 +86,10 @@
     padding: 4px 8px;
   }
 
+  .lineage-list .label {
+    padding: 4px 8px;
+  }
+
   .capsule-list {
     margin-top: 8px;
     margin-bottom: -8px;
@@ -94,7 +98,7 @@
   }
 
   .capsule-list li {
-    border: 1px solid #44b8cc;;
+    border: 1px solid #44b8cc;
     padding: 5px 10px;
     border-radius: 20px;
     margin-right: 8px;
