--- a/src/pug/top.pug
+++ b/src/pug/top.pug
@@ -1,17 +1,23 @@
 extends _template/_base
 
 block vars
+  - lev1ID = "top";
   - stanzaIDs = ["gmdb_list_media_by_gmids","gmdb_list_media_by_keywords","gmdb_list_components_by_gmoids","gmdb_list_components_by_keywords","gmdb_list_organisms_by_taxids","gmdb_list_organisms_by_keywords"]
 
 
 block main
   input#queryInput(placeholder="search")
-  togostanza-gmdb_list_media_by_gmids#mediaByIDs(gm_ids="")
-  togostanza-gmdb_list_media_by_keywords#mediaByKeywords(keywords="")
-  togostanza-gmdb_list_components_by_gmoids#componentsByIDs(gmo_ids="")
-  togostanza-gmdb_list_components_by_keywords#componentsByKeywords(keywords="")
-  togostanza-gmdb_list_organisms_by_taxids#organismsByIDs(tax_ids="")
-  togostanza-gmdb_list_organisms_by_keywords#organismsByKeywords(keywords="")
+  p.info#info
+    | Try searching with any IDs and keywords you are come up with.<br>
+    | Terms should be separated by "," if multiple queries are requested.<br>
+    | e.g. Glucose, GMO_001010, 315405
+  .stanza-wrapper#stanzaWrapper
+    togostanza-gmdb_list_media_by_gmids#mediaByIDs.stanza(gm_ids="")
+    togostanza-gmdb_list_media_by_keywords#mediaByKeywords.stanza(keywords="")
+    togostanza-gmdb_list_components_by_gmoids#componentsByIDs.stanza(gmo_ids="")
+    togostanza-gmdb_list_components_by_keywords#componentsByKeywords.stanza(keywords="")
+    togostanza-gmdb_list_organisms_by_taxids#organismsByIDs.stanza(tax_ids="")
+    togostanza-gmdb_list_organisms_by_keywords#organismsByKeywords.stanza(keywords="")
 
 
 block scripts
