--- a/src/stanza/gmdb_list_media_by_keywords/templates/stanza.html
+++ b/src/stanza/gmdb_list_media_by_keywords/templates/stanza.html
@@ -16,10 +16,52 @@
     color: #333;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
   }
-  .query-key{
+
+  h2 {
+    margin-bottom: 10px;
+    font-weight: 600;
+  }
+
+  .query-key {
     background-color: #f5f4f3;
-    padding: 5px;
+    padding: 5px 10px;
     color: #CC3366;
+    font-weight: 300;
+    border-radius: 3px;
+    display: inline-block;
+    margin-bottom: 5px;
+  }
+
+  .id-list {
+    border: 1px solid #CCC;
+    border-radius: 5px;
+  }
+
+  .id-list li {
+    padding: 12px 8px;
+    border-bottom: 1px solid #CCC;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .id-list li:last-child {
+    border: none;
+  }
+
+  .id-list span:first-child {
+    /*width: 20%;*/
+    min-width: 100px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    margin-right: 10px;
+  }
+
+  .id-list span:last-child {
+
+  }
+
+  a {
+    color: #256d80;
   }
 </style>
 
@@ -35,6 +77,19 @@
         <span class="query-key">{{this}}</span>
       {{/each}}
     </h2>
+    {{#if result.items.length}}
+      <ul class="id-list">
+        {{#each result.items}}
+          <li>
+            <span class="id"><a href="/medium/{{gm_id}}">{{gm_id}}</a></span>
+            <span class="label">{{label}}</span>
+          </li>
+        {{/each}}
+      </ul>
+    {{/if}}
+    {{#unless result.items.length}}
+      <p class="msg">{{msg}}</p>
+    {{/unless}}
   </div>
 {{/unless}}
 
